feat: Configure dual API keys and fix chatbot LLM integration
- Updated medical reports to use dedicated API key (AIzaSyCIy-Xnmuk1UkLih07w68k9MW8Ah-D1ANk)
- Set general API key for insurance approval and other services (AIzaSyD9qs4O_R3CoSOLcbQTAKQXwN8wn1WAmqM)
- Fixed chatbot to use Gemini API instead of missing DeepSeek configuration
- Updated all API routes to use correct authentication
- Added embedding test scripts for medical reports analysis
- Improved error handling for API quota exceeded scenarios
- Enhanced insurance approval service configuration
- Updated Qdrant collection setup for 768-dimensional embeddings

--- a/process.env
+++ b/process.env
@@ -2,9 +2,9 @@
 # MEDICAL REPORTS AI FEATURE CONFIGURATION
 # ==================================================
 
-# Google Gemini AI API Key (required for medical report analysis)
+# Google Gemini AI API Key (required for general services - insurance, chat, etc.)
 # Get your API key from: https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY=AIzaSyCPQ6ZoIW7WtCn6EFcKH-w2FcuglEVT71o
+GOOGLE_API_KEY=AIzaSyD9qs4O_R3CoSOLcbQTAKQXwN8wn1WAmqM
 
 # OpenAI API Key (required for Portia AI agent and GPT models)
 # Get your API key from: https://platform.openai.com/api-keys
