Add GEMINI_API_KEY to process.env

--- a/process.env
+++ b/process.env
@@ -4,6 +4,7 @@
 
 # Google Gemini AI API Key (required for general services - insurance, chat, etc.)
 # Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyBlQhpK1WUNFsXMHzI7dsIloVSJeIyTTEI
 GOOGLE_API_KEY=AIzaSyD9ubsXUnHT7ReRJ6GIzrWhFTA-lvPfa4g
 
 # OpenAI API Key (required for Portia AI agent and GPT models)
